--- a/styles.css
+++ b/styles.css
@@ -51,41 +51,12 @@
     right: 40%;
 }
 
-.chessboard div:nth-child(2) span {
+.chessboard div:nth-child(n+2):nth-child(n-7) span {
     position: absolute;
     top: -70%;
     right: 40%;
 }
 
-.chessboard div:nth-child(3) span {
-    position: absolute;
-    top: -70%;
-    right: 40%;
-}
-
-.chessboard div:nth-child(4) span {
-    position: absolute;
-    top: -70%;
-    right: 40%;
-}
-
-.chessboard div:nth-child(5) span {
-    position: absolute;
-    top: -70%;
-    right: 40%;
-}
-
-.chessboard div:nth-child(6) span {
-    position: absolute;
-    top: -70%;
-    right: 40%;
-}
-
-.chessboard div:nth-child(7) span {
-    position: absolute;
-    top: -70%;
-    right: 40%;
-}
 
 .chessboard div:nth-child(8) span {
     position: absolute;
